--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				
 			</plugin>
 		</plugins>
+		<finalName>spring-jenkin-integration</finalName>
 	</build>
 
 </project>
